--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-scikit-learn
+streamlit
+plotly
 pandas
-numpy 
-matplotlib
-ipykernel
+numpy
+scikit-learn
 seaborn
 memory_profiler
-streamlit
-streamlit_option_menu
